compiler/typ/tests/fixtures/diagnostics/0297_fun_explicit_poly_returns_bool_06.ml.infer.expected
File "0297_fun_explicit_poly_returns_bool_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0297_fun_explicit_poly_returns_bool_06 is not a valid module name.

File "0297_fun_explicit_poly_returns_bool_06.ml", line 1, characters 30-43:
1 | let bad_zeta : 'a. 'a -> 'a = fun _ -> true
                                  ^^^^^^^^^^^^^
Error: This definition has type bool -> bool which is less general than
         'a. 'a -> 'a
       The type bool is not a type variable.
